# anmitts2

./: .env.example  .gitignore  API_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_RECORD.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-RECORD.md  DEPLOYMENT.md  Dockerfile  FEATURES.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  README-CN.md  README.md  SETUP.md  SETUP_SUMMARY.md  VERIFICATION_SUMMARY.md  app.py  deploy-verify.sh  docker-compose.yml  index.html  namitts2.txt  package.json  test_integration.py  vercel.json  worker.py  wrangler.toml
backend/: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  robots.json  setup.bat  setup.sh  test_api.py
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routes/: tts.py
backend/app/services/: tts_service.py
frontend/: .env.example  .gitignore  INSTALLATION.md  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AudioPlayer.tsx  TTSForm.tsx  VoiceSelector.tsx
frontend/src/hooks/: useTTS.ts
frontend/src/services/: api.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
src/: index.js
src/services/: nano-ai-tts.js  text-processor.js  tts.js
src/utils/: md5.js
tests/: curl-examples.sh  test.js  test_python.py
